--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -53,6 +53,11 @@
                         </ul>
                         <hr/>
                         {% endif %}
+                        <h5 class="news-blog-header">(2018-05-09):</h5>
+                        <ul class="news-blog-bullet">
+                            <li>Updated to include new 2.32.2 Balance Patch, cycling out oldest 2.31.x Balance patches.</li>
+                            <li>Re-added Master Rank filter option.</li>
+                        </ul>
                         <h5 class="news-blog-header">(2018-04-24):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated to include new 2.32.0 Deckard Patch, cycling out oldest 2.30.6 Balance patch.</li>
@@ -64,10 +69,10 @@
                             <li>Consolidated filters to consist of frequently used options, finally allowing for comprehensive computation of all filter combinations. Previously, all possible combinations used to number in the billions, now that number is reduced to less than 40,000 making full filter-computation coverage feasible. This will remove any possibility of a user being served stale data in the future, even for infrequently visited filter combinations.</li>
                             <li>Added a search bar to 'talents' page friend/foe matchup tables (much like the one found on the 'heroes' page), allowing you to much more quickly find hero/role counters or synergies!</li>
                         </ul>
-                        <h5 class="news-blog-header">(2018-03-27):</h5>
+                        {#<h5 class="news-blog-header">(2018-03-27):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated to include new 2.31.0 Fenix Patch, cycling out oldest 2.29.7 Blaze patch.</li>
-                        </ul>
+                        </ul>#}
                         {#<hr/>
                         <div class="text-center">
                             <span><a class="email" style="font-size:24px;" href="https://www.patreon.com/hotstatus" target="_blank">Patreon Angel Supporters</a></span>
