finalized player heroes statslist, updated news

--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -53,6 +53,10 @@
                         </ul>
                         <hr/>
                         {% endif %}
+                        <h5 class="news-blog-header">(2018-05-18):</h5>
+                        <ul class="news-blog-bullet">
+                            <li>Implemented frequently requested 'Heroes Statslist' for Player profiles. Viewable by clicking the 'Heroes' tab inside of a player profile. Allows players to view their seasonal performance for all heroes in a sortable table, with a larger variety of filter options.</li>
+                        </ul>
                         <h5 class="news-blog-header">(2018-05-09):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated to include new 2.32.2 Balance Patch, cycling out oldest 2.31.x Balance patches.</li>
