--- a/app/Resources/views/default/playerheroes.html.twig
+++ b/app/Resources/views/default/playerheroes.html.twig
@@ -48,6 +48,7 @@
                                 {% include ':snippets:heroes/filter/dropdown/select/seasons.html.twig' %}
                                 {% include ':snippets:heroes/filter/dropdown/multiselect/gameTypes.html.twig' %}
                                 {% include ':snippets:heroes/filter/dropdown/select/maps.html.twig' %}
+                                {% include ':snippets:heroes/filter/dropdown/select/playerHeroesStatslist.html.twig' %}
                             </div>
                         {% endblock %}
                         {% block player_summary %}
