--- a/app/Resources/views/snippets/heroes/filter/dropdown/select/playerHeroesStatslist.html.twig
+++ b/app/Resources/views/snippets/heroes/filter/dropdown/select/playerHeroesStatslist.html.twig
@@ -1,10 +1,10 @@
-{% set selectOnce = true %}
-<select class="selectpicker filter-selector filter-selector-map" data-width="305px" title="No Maps Selected"
-        data-max-options="1" data-max-options-text="Max 1 Selection" multiple>
-    {% for key, map in filter_maps %}
-        <option {% if map.selected == true and selectOnce %}{% set selectOnce = false %}selected="selected"{% endif %}
-                title="<img class='filter-dropdown-image-map filter-dropdown-image-map-title' src='{{ asset('/ui/map_icon_'~map.name_sort~'.png', 'images') }}'>"
-                data-content="<img class='filter-dropdown-image-map filter-dropdown-image-margin-right-8' src='{{ asset('/ui/map_icon_'~map.name_sort~'.png', 'images') }}'>{{ key }}"
-                value="{{ map.value }}">{{ key }}</option>
-    {% endfor %}
+<select class="selectpicker filter-selector filter-selector-playerHeroesStatslist" data-width="180px" title="No Table"
+        data-max-options="1" data-max-options-text="Max 1 Table" multiple>
+    <option selected="selected"
+            data-content="Summary"
+            value="Summary">Summary</option>
+    <option data-content="Performance"
+            value="Performance">Performance</option>
+    <option data-content="Miscellaneous"
+            value="Miscellaneous">Miscellaneous</option>
 </select>
