--- a/app/Resources/views/default/hero.html.twig
+++ b/app/Resources/views/default/hero.html.twig
@@ -35,6 +35,7 @@
                 {% embed ':snippets:heroes/heroloader.html.twig' %}
                     {% block javascripts %}{% endblock %}
                     {% block filter %}
+                        {% set rankMode = 'Hero' %}
                         <div>
                             {% include ':snippets:heroes/filter/dropdown/select/gameTypesFull.html.twig' %}
                             {% include ':snippets:heroes/filter/dropdown/select/maps.html.twig' %}
