--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -53,6 +53,10 @@
                         </ul>
                         <hr/>
                         {% endif %}
+                        <h5 class="news-blog-header">(2018-06-06):</h5>
+                        <ul class="news-blog-bullet">
+                            <li>Updated to include new 2.33.1 Balance patch, cycling out oldest 2.32.2 Balance patch.</li>
+                        </ul>
                         <h5 class="news-blog-header">(2018-05-22):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated to include new 2.33.0 Rework patch, cycling out oldest 2.32.0 Deckard patch.</li>
@@ -71,12 +75,12 @@
                             <li>Updated to include new 2.32.0 Deckard patch, cycling out oldest 2.30.6 Balance patch.</li>
                             <li>Added 'Angel Supporter' Patreon tier.</li>
                         </ul>
-                        <h5 class="news-blog-header">(2018-04-12):</h5>
+                        {#<h5 class="news-blog-header">(2018-04-12):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated to include new 2.31.2 Balance patch, cycling out all filter options for patches older than the 3 most recent updates.</li>
                             <li>Consolidated filters to consist of frequently used options, finally allowing for comprehensive computation of all filter combinations. Previously, all possible combinations used to number in the billions, now that number is reduced to less than 40,000 making full filter-computation coverage feasible. This will remove any possibility of a user being served stale data in the future, even for infrequently visited filter combinations.</li>
                             <li>Added a search bar to 'talents' page friend/foe matchup tables (much like the one found on the 'heroes' page), allowing you to much more quickly find hero/role counters or synergies!</li>
-                        </ul>
+                        </ul>#}
                         {#<h5 class="news-blog-header">(2018-03-27):</h5>
                         <ul class="news-blog-bullet">
                             <li>Updated to include new 2.31.0 Fenix Patch, cycling out oldest 2.29.7 Blaze patch.</li>
