--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -44,7 +44,7 @@
                         <div class="d-inline-block"><h5>{{ processedReplays }}</h5></div> replays have been processed for over <div class="d-inline-block"><h5>1,560,000</h5></div> unique players since September 2017!
                         {% if queuedReplays_raw > 0 %}<br><br><div class="d-inline-block"><h5>{{ queuedReplays }}</h5></div> replays currently queued for processing.{% endif %}
                         <hr/>
-                        <span style="color:#77ff86;">You can help us keep the lights on via <a class="email" href="https://www.patreon.com/hotstatus" target="_blank">Patreon</a>, or by whitelisting Hotstat.us in your Adblocker!</span>
+                        <span style="color:#77ff86;">You can help us keep the lights on via <a class="email" href="https://www.patreon.com/hotstatus" target="_blank">Patreon</a>{#, or by whitelisting Hotstat.us in your Adblocker#}!</span>
                         <hr/>
                         {% if outage['exists'] == true %}
                         <h5><a style="color:#FF0000;">Service Disruption:</a></h5>
